Not much of change

--- a/python-practice.ipynb
+++ b/python-practice.ipynb
@@ -19,6 +19,30 @@
     "a[0] = 211\n",
     "print(b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABC\n",
+      "ABX\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"ABC\"\n",
+    "size = len(text)\n",
+    "x = text\n",
+    "replacement = \"X\"\n",
+    "print(x)\n",
+    "text = text.replace(text[size - 1 :], replacement)\n",
+    "print(text)\n"
+   ]
   }
  ],
  "metadata": {
