minor change in python file

--- a/python/python-practice.ipynb
+++ b/python/python-practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,6 +42,28 @@
     "print(x)\n",
     "text = text.replace(text[size - 1 :], replacement)\n",
     "print(text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id of a is 2431304663568\n",
+      "id of b is 2431304663568\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 10\n",
+    "print(\"id of a is {}\".format(id(a)))\n",
+    "print(\"id of b is {}\".format(id(b)))\n",
+    "\n"
    ]
   }
  ],
